# profile-service

./: Cargo.toml  Dockerfile  README.md  deploy.sh  entrypoint.sh  justfile  login.perf.js
migrations/2020-02-08-172018_create_user/: up.sql
migrations/2021-01-16-140825_refresh_tokens/: down.sql  up.sql
src/: database.rs  email_sender.rs  jwt.rs  main.rs  oauth.rs  schema.rs
src/controllers/: mod.rs  oauth.rs  oauth_util.rs  response.rs  users.rs  users_util.rs
src/models/: mod.rs  user.rs  validator.rs
src/repository/: refresh_token.rs  user.rs
src/routes/: login.rs  mod.rs  oauth.rs  oauth_util.rs  profile_lookup.rs  refresh_token.rs  register.rs  users.rs  users_util.rs
src/test/: authenticate.rs  login.rs  mod.rs  refresh_token.rs  register.rs
src/util/: authorization.rs  globals.rs  mod.rs  response.rs  validator.rs
