[package]
name = "profile"
version = "0.1.0"
authors = ["beem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["secrets"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["json", "diesel_postgres_pool"] }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" , branch = "master"}
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7"
time = "0.2"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", branch = "master" }
oauth2 = "2.0.0"
base64 = "0.12.0"
url = "1.7.2"
rand = "0.7.3"
async-trait = "0.1.31"
futures = "0.3.7"
argonautica = { version = "0.2.0" }
postgres = { version = "0.15", features = ["with-chrono"]  }
