[package]
name = "profile"
version = "0.1.0"
authors = ["beem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["secrets"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["json", "diesel_postgres_pool"] }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" , branch = "master"}
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", branch = "master" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }
jsonwebtoken = "7"
time = "0.2"
oauth2 = { version = "3.0.0", features = ["futures-03", "reqwest-010"] }
rand = "0.7.3"
async-trait = "0.1.31"
futures = { version = "0.3.7", features = ["thread-pool"] }
postgres = { version = "0.15", features = ["with-chrono"]  }
rust-argon2 = "0.8"
lettre = { version = "0.10.0-alpha.4", features = ["tokio02",  "smtp-transport", "tokio02-native-tls"] }

[dev-dependencies]
lazy_static = "1.4.0"
