[package]
name = "profile-service"
version = "0.1.2"
authors = ["beem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"]}
validator = { version = "0.12", features = ["derive"] }
jsonwebtoken = "7"
time = "0.2"
oauth2 = { version = "3.0.0" }
rand = "0.7.3"
async-trait = "0.1.31"
futures = { version = "0.3.7", features = ["thread-pool"] }
postgres = { version = "0.15", features = ["with-chrono"]  }
rust-argon2 = "0.8"
lettre = { version = "0.10.0-rc.3", features = ["smtp-transport", "async-std1", "tokio1", "tokio1-native-tls"] }

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
